--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body onload="main()">
     <canvas id="myCanvas" width=1200 height="600"> halo browser</canvas>
-    <!-- <h1>test</h1> -->
+    <h1 style="color:#ffffff;">Selomita Zhafiirah</b> 5025201120<b style="color: rgb(0, 213, 255);"></b></h1>
     <script src="main.js"></script>
 </body>
 
